Set up Dockerfile and docker-compose for containerization

--- a/src/CleanRobust.API/CleanRobust.API.csproj
+++ b/src/CleanRobust.API/CleanRobust.API.csproj
@@ -5,7 +5,8 @@
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>74b63d4c-f1ec-4525-81ad-71d1350e6f6d</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
