--- a/src/CleanRobust.API/Dockerfile
+++ b/src/CleanRobust.API/Dockerfile
@@ -1,11 +1,13 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-nanoserver-1809 AS base
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
 
 # This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:8.0-nanoserver-1809 AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["CleanRobust.API/CleanRobust.API.csproj", "CleanRobust.API/"]
@@ -15,12 +17,12 @@ COPY ["CleanRobust.Infrastructure/CleanRobust.Infrastructure.csproj", "CleanRobu
 RUN dotnet restore "./CleanRobust.API/CleanRobust.API.csproj"
 COPY . .
 WORKDIR "/src/CleanRobust.API"
-RUN dotnet build "./CleanRobust.API.csproj" -c %BUILD_CONFIGURATION% -o /app/build
+RUN dotnet build "./CleanRobust.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./CleanRobust.API.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./CleanRobust.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
