--- a/src/CleanRobust.API/appsettings.json
+++ b/src/CleanRobust.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=sqlserver;Initial Catalog=CleanRobust;User Id=sa;Password=123456@#Az;TrustServerCertificate=True"
+  }
 }
