--- a/src/CleanRobust.Application.UnitTests/CleanRobust.Application.UnitTests.csproj
+++ b/src/CleanRobust.Application.UnitTests/CleanRobust.Application.UnitTests.csproj
@@ -13,7 +13,12 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="xunit.categories" Version="3.0.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CleanRobust.Application\CleanRobust.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
